# imu_pose_calib

./: CMakeLists.txt  LICENSE  README.md
app/: imu_pose_calib.cpp  utils.h
scripts/: calibrate.py  config.yaml  pose_utils.py  requirements.txt
